drrx/fixtures/invalid/invalid-root-files-block.tree.drrx
.                       # root
+== README.md
|                       # spacer ends root file block
+-- src/
| :== main.py
+== LATE.md             # file after spacer/dir at root (OR.04)
